tests/declare_var/declare_var.exp
Error -------------------------------------------------------------- test.js:4:2

Cannot cast `null` to `T` because null is incompatible with number.

Error: test.js:4
  4: (null: T); // error: null ~> number
      ^^^^ Cannot cast `null` to `T` because null [1] is incompatible with number [2].
  References:
    4: (null: T); // error: null ~> number
        ^^^^ [1]: null
    4: (null: T); // error: null ~> number
              ^ [2]: number


Found 1 error
